--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <!-- header -->
 <header class="header">
     <div class="header__nav">
-      <div class="header__nav--logo">
-        <img src="./assets/Logo/Logo-bandsite.svg" alt="Bandsite">
+      <div class="header__nav--container">
+        <img src="./assets/Logo/Logo-bandsite.svg" alt="Bandsite" class="header__nav--logo">
       </div>
       <ul class="header__menu">
       <li class="header__menu--link" >Biography</li>
@@ -33,18 +33,16 @@
 
 <!-- hero -->
 <section class="hero">
-<div class="hero__title">
-  <h1>About the Musicians</h1>
-</div>
-<div class="hero__image">
-  <img src="./assets/images/band.jpg" alt="The Bees Knees" style="width:100%">
-</div>
-<div class="hero__subtitle">
-  <p>"We push each other to be the best. It's not uncommon for one of us to say 'this needs to be better, back to the drawing board'"</p>
+
+  <h1 class="hero__title">About the Musicians</h1>
+
+  <img src="./assets/images/band.jpg" alt="The Bees Knees" class="hero__image">
+
+  <p class="hero__subtitle">"We push each other to be the best. It's not uncommon for one of us to say 'this needs to be better, back to the drawing board'"</p>
   <p class="hero__subtitle2">- Lead vocalist of The Bees Knees</p>
-</div>
+
+<h2 class="hero__subtitle3">The Bees Knees</h2>
 <div class="hero__content">
-  <h2 class="hero__content--title">The Bees Knees</h2>
   <p class="hero__content--text">The Bees Knees is a pop rock band originating
     from San Francisco, California. The band
     consists a dynamic lineup featuring two lead
@@ -77,7 +75,7 @@
   <div class="content__title">
     <h1>Photo Gallery</h1>
   </div>
-  <div class="content__item">
+  <div class="content__image">
     <img src="./assets/images/Photo-gallery-1.jpg" alt="The Bees Knees" 
   class="content__image--item">
     <img src="./assets/images/Photo-gallery-2.jpg" alt="The Bees Knees" 
@@ -100,27 +98,30 @@
 </section>
 <!-- footer -->
 <section class="footer">
-<h1>Get in Touch</h1>
-<div class="footer__logo">
-  <img src="./assets/Icons/SVG/Icon-instagram.svg" alt="Instagram">
-  <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="Facebook">
-  <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="Twitter">
+<h1 class="footer__title">Get in Touch</h1>
+<div class="footer__icon">
+  <img src="./assets/Icons/SVG/Icon-instagram.svg" alt="Instagram" class="footer__icon--item">
+  <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="Facebook" class="footer__icon--item">
+  <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="Twitter" 
+  class="footer__icon--item">
 </div>
-<h2>The Bees Knees Management</h2>
-<p>503 Broadway Penthouse</p>
-<p>New York, NY 10012 USA</p>
-<p>info@thebeesknees.com</p>
-<h2>Limitless Artist Group</h2>
-<p>Booking Agent for</p>
-<p>US/South America/Japan</p>
-<p>bookings@limitlessage.com</p>
-<h2>ARCH Entertainment</h2>
-<p>Booking Agent for</p>
-<p>UK/EU/AU</p>
-<p>bookings@archentertainment.com</p>
+<h2 class="footer__subtitle">The Bees Knees Management</h2>
+<p class="footer__text">503 Broadway Penthouse</p>
+<p class="footer__text--attached">New York, NY 10012 USA</p>
+<p class="footer__text">info@thebeesknees.com</p>
+<h2 class="footer__subtitle">Limitless Artist Group</h2>
+<p class="footer__text">Booking Agent for</p>
+<p class="footer__text--attached">US/South America/Japan</p>
+<p class="footer__text">bookings@limitlessage.com</p>
+<h2 class="footer__subtitle">ARCH Entertainment</h2>
+<p class="footer__text">Booking Agent for</p>
+<p class="footer__text--attached">UK/EU/AU</p>
+<p class="footer__text">bookings@archentertainment.com</p>
 
-<h2>Bandsite</h2>
-<p>Copyright The Bees Knees © 2023 All Rights Reserved</p>
+<div class="footer__logo">
+  <img src="./assets/Logo/Logo-bandsite.svg" alt="Bandsite">
+</div>
+<p class="footer__logo--text">Copyright The Bees Knees © 2023 All Rights Reserved</p>
 
 </section>
 
