--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
   <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-  <!-- header -->
+
 <header class="header">
     <div class="header__nav">
       <div class="header__nav--container">
         <img src="./assets/Logo/Logo-bandsite.svg" alt="Bandsite" class="header__nav--logo">
       </div>
       <ul class="header__menu">
-      <li class="header__menu--link" >Biography</li>
-      <li class="header__menu--link">Shows</li>
+        <div class="link__highlight--container">
+          <li class="header__menu--link link__highlight" >Biography</li>
+        </div>
+        <li class="header__menu--link">Shows</li>
       </ul>
-    </div>
+    </div> 
 </header>
 
 <div class="banner">
