--- a/index.html
+++ b/index.html
@@ -99,23 +99,30 @@
 <h1 class="footer__title">Get in Touch</h1>
 <div class="footer__icon">
   <img src="./assets/Icons/SVG/Icon-instagram.svg" alt="Instagram" class="footer__icon--item">
-  <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="Facebook" class="footer__icon--item">
+  <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="Facebook" class="footer__icon--item footer__icon--highlight">
   <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="Twitter" 
   class="footer__icon--item">
 </div>
-<h2 class="footer__subtitle">The Bees Knees Management</h2>
-<p class="footer__text">503 Broadway Penthouse</p>
-<p class="footer__text--attached">New York, NY 10012 USA</p>
-<p class="footer__text">info@thebeesknees.com</p>
-<h2 class="footer__subtitle">Limitless Artist Group</h2>
-<p class="footer__text">Booking Agent for</p>
-<p class="footer__text--attached">US/South America/Japan</p>
-<p class="footer__text">bookings@limitlessage.com</p>
-<h2 class="footer__subtitle">ARCH Entertainment</h2>
-<p class="footer__text">Booking Agent for</p>
-<p class="footer__text--attached">UK/EU/AU</p>
-<p class="footer__text">bookings@archentertainment.com</p>
-
+<div class="footer__text">
+  <div class="footer__text--container1">
+    <h2 class="footer__text--title">The Bees Knees Management</h2>
+    <p class="footer__text--content footer__text--content1">503 Broadway Penthouse</p>
+    <p class="footer__text--content footer__text--content2">New York, NY 10012 USA</p>
+    <p class="footer__text--content footer__text--content3">info@thebeesknees.com</p>
+  </div>
+  <div class="footer__text--container">
+    <h2 class="footer__text--title">Limitless Artist Group</h2>
+    <p class="footer__text--content footer__text--content1">Booking Agent for</p>
+    <p class="footer__text--content footer__text--content2">US/South America/Japan</p>
+    <p class="footer__text--content footer__text--content3">bookings@limitlessage.com</p>
+  </div>
+  <div class="footer-text--container">
+    <h2 class="footer__text--title">ARCH Entertainment</h2>
+    <p class="footer__text--content footer__text--content1">Booking Agent for</p>
+    <p class="footer__text--content footer__text--content2">UK/EU/AU</p>
+    <p class="footer__text--content footer__text--content3">bookings@archentertainment.com</p>
+  </div>
+</div>
 <div class="footer__logo">
   <img src="./assets/Logo/Logo-bandsite.svg" alt="Bandsite">
 </div>
