--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 <header class="header">
     <div class="header__nav">
       <div class="header__nav--container">
-        <img src="./assets/Logo/Logo-bandsite.svg" alt="Bandsite" class="header__nav--logo">
+        <a href="./index.html">
+          <img src="./assets/Logo/Logo-bandsite.svg" alt="Bandsite" class="header__nav--logo">
+        </a>
       </div>
       <ul class="header__menu">
         <div class="link__highlight--container">
-          <li class="header__menu--link link__highlight" >Biography</li>
+          <li class="header__menu--link link__highlight" >
+            <a href="" class="link__text">Biography</a></li>
         </div>
-        <li class="header__menu--link">Shows</li>
+        <li class="header__menu--link">
+          <a href="" class="link__text">Shows</a></li>
       </ul>
     </div> 
 </header>
@@ -106,7 +110,7 @@
 <div class="footer__text">
   <div class="footer__text--container1">
     <h2 class="footer__text--title">The Bees Knees Management</h2>
-    <p class="footer__text--content footer__text--content1">503 Broadway Penthouse</p>
+    <p class="footer__text--content footer__text--content1">503 Broadway Penthouse,</p>
     <p class="footer__text--content footer__text--content2">New York, NY 10012 USA</p>
     <p class="footer__text--content footer__text--content3">info@thebeesknees.com</p>
   </div>
