--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="./styles/bio.css">
 </head>
 <body>
 
@@ -99,29 +99,39 @@
 <section class="footer">
     <h1 class="footer__title">Get in Touch</h1>
     <div class="footer__icon">
-      <img src="./assets/Icons/SVG/Icon-instagram.svg" alt="Instagram" class="footer__icon--item">
-      <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="Facebook" class="footer__icon--item footer__icon--highlight">
-      <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="Twitter" 
-      class="footer__icon--item">
+      <a href="https://www.instagram.com/">
+        <img src="./assets/Icons/SVG/Icon-instagram.svg" alt="Instagram" class="footer__icon--item">
+      </a>
+      <a href="https://www.facebook.com/">
+        <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="Facebook" class="footer__icon--item footer__icon--highlight">
+      </a>
+      <a href="http://twitter.com/">
+        <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="Twitter" 
+        class="footer__icon--item">
+      </a>
     </div>
     <div class="footer__text">
       <div class="footer__text--container1">
         <h2 class="footer__text--title">The Bees Knees Management</h2>
         <p class="footer__text--content footer__text--content1">503 Broadway Penthouse,</p>
         <p class="footer__text--content footer__text--content2">New York, NY 10012 USA</p>
-        <p class="footer__text--content footer__text--content3">info@thebeesknees.com</p>
+        <p class="footer__text--content">
+         <a href="mailto:info@thebeesknees.com" class="footer__text--content3">info@thebeesknees.com</a></p>
       </div>
       <div class="footer__text--container">
         <h2 class="footer__text--title">Limitless Artist Group</h2>
         <p class="footer__text--content footer__text--content1">Booking Agent for</p>
         <p class="footer__text--content footer__text--content2">US/South America/Japan</p>
-        <p class="footer__text--content footer__text--content3">bookings@limitlessage.com</p>
+        <p class="footer__text--content">
+          <a href="mailto:bookings@limitlessage.com" class="footer__text--content3">bookings@limitlessage.com</a>
+        </p>
       </div>
       <div class="footer-text--container">
         <h2 class="footer__text--title">ARCH Entertainment</h2>
         <p class="footer__text--content footer__text--content1">Booking Agent for</p>
         <p class="footer__text--content footer__text--content2">UK/EU/AU</p>
-        <p class="footer__text--content footer__text--content3">bookings@archentertainment.com</p>
+        <p class="footer__text--content">
+         <a href="mailto:bookings@archentertainment.com" class="footer__text--content3">bookings@archentertainment.com</a></p>
       </div>
     </div>
     <div class="footer__logo">
